k8s/auth-usuarios/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-usuarios
  namespace: mercadourbano
spec:
  selector:
    app: auth-usuarios
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
