k8s/auth-usuarios/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mercadourbano-ingress
  namespace: mercadourbano
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: auth.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-usuarios
                port:
                  number: 3001
